SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository, snapshots and future releases.
===============================================================================================

Enhancements:

Graph Plugin: Columns in be hidden.

When data is copied to a new window, the window now offers the usual data find column function.

Table cell data popup: File export creates parent directories when needed
  and the export finished dialog offers to open the export file's directory.

When data is copied to a new window, the window now offers the usual data find function.

Minor UI improvements:
  - Added menu item File --> Open Saved Session
  - The About-dialog links to update locations

SQL result tab edit toggle button:
  Fix: Switching back to uneditable used to redisplay the data from before editing was switched on.
  Improvement: When editing is switched on the message panel hints to the current auto commit state.

The SQL result tab now has an edit toggle button.

When a file is opened in the operating system's file manager the file is now selected.
  This works only if Java's OS specific Desktop API supports it.
  Otherwise the file manager just opens the file's directory.

The file chooser remembers the last selected view type (list view or details view).

Look and Feel Plugin: Dark theme for the Nimbus look and feel.
  The theme is based on Wayne Zhang's pull request
  https://github.com/squirrel-sql-client/squirrel-sql-code/pull/12
  and was integrated into SQuirreL's Look and Feel Plugin.
  Thanks to Wayne Zhang for the theme.

#156 The table cell data popup and the Object tree source tabs support searching.
  See the find button at the lower right of the table cell data popup.
  See the find bar at the bottom of the Object tree source tabs.

Table cell data popup: The right mouse menu entries "Wrap Lines on/off" and "Wrap Word on/off"
  are now checked menu items and their dependence is respected.
