@@ -1,0 +1,7 @@
+package net.sourceforge.squirrel_sql.plugins.graph;
+
+@FunctionalInterface
+public interface ColumnHiddenListener
+{
+   void columnHidden();
+}
