@@ -48,6 +48,7 @@ link.image=link.png
 copyGraph.image=copyGraph.png
 pasteGraph.image=pasteGraph.png
 eyeConfig.image=eyeConfig.png
+eyeConfigChecked.image=eyeConfigChecked.png
 eyeCrossed.image=eyeCrossed.png
 
 
